--- a/airbnb-clone/src/index.css
+++ b/airbnb-clone/src/index.css
@@ -1,7 +1,63 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap');
+
 * {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
+  font-family: 'Poppins', sans-serif;
+}
+
+nav {
+  padding: 20px;
+  height: 70px;
+  box-shadow: 0px 2.98px 7.46px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+}
+
+.navImage {
+  height: 40px;
+}
+
+.hero {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.hero-photo {
+  max-width: 600px;
+  align-self: center;
+}
+
+.hero-header {
+  margin-bottom: 16px;
+}
+
+.hero-para {
+  margin-top: 0;
+}
+
+
+.card {
+  width: 175px;
+  font-size: 12px;
+}
+
+.card-image {
+  width: 100%;
+  border-radius: 9px;
+}
+
+.card-badge {
+  margin-block: 0px;
+  margin-bottom: 0px;
+}
+
+.card-stats {
+  display: flex;
+  align-items: center;
+  : 0px;
 }
